[BUGFIX] Added a delete icon to employee onboarding on the add employer section under work history, previous commit broke dark mode on some pages, this is now fixed.

--- a/assets/css/login-css-2024.css
+++ b/assets/css/login-css-2024.css
@@ -5,6 +5,13 @@ body {
     background-color: #f1f1f1;
 }
 
+.dark-mode .license-container,
+.dark-mode .login-container,
+.dark-mode .wrapper,
+.dark-mode body {
+    background-color: #000;
+}
+
 body {
     height: 100vh;
     background-color: #f1f1f1;
@@ -177,7 +184,36 @@ body {
     align-items: center;
     display: flex;
 }
+.icon-container {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
 
+.icon-trash {
+    font-size: 24px;
+    color: #000; 
+}
+
+.icon-overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    display: none; 
+}
+
+.icon-container:hover .icon-overlay {
+    display: flex; 
+}
 .caliweb-login-footer-text {
     font-size: 10px;
 }
